# white-hole

./: .env  .gitignore  Cargo.toml  Dioxus.toml  README.md  build.rs  package-lock.json  package.json  pnpm-lock.yaml  tailwind.css
.github/workflows/: publish.yml
assets/: styles.css  tailwind.css
hotkey/: Cargo.toml
hotkey-macros/: Cargo.toml
hotkey-macros/src/: lib.rs
hotkey/src/: lib.rs
isolation/: index.html
migrations/: 20250723154458_public_suffix_list.sql  20250727005802_navigation_log.sql  20260102163957_darkreader_blacklist.sql
src/: api.rs  app.rs  darkreader.rs  extension.rs  http_client.rs  incognito.rs  main.rs  navigation.rs  search_input.rs  search_page.rs  settings.rs  title_bar.rs  url.rs  window_decoration.rs
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/js/: all_frames_init.js  darkreader.js  prevent_default_hotkey.js  webview_init.js
src-tauri/src/: browser.rs  command.rs  darkreader.rs  database.rs  error.rs  hotkey.rs  icon.rs  lib.rs  log.rs  macros.rs  main.rs  page.rs  prevent_default.rs  public_suffix.rs  request.rs  shortcut.rs  state.rs  tab.rs  task.rs  update.rs  url.rs  user_agent.rs  webview_init_script.js
src-tauri/windows/: registry.nsh  registry.wxs
src/http_client/: body.rs  header.rs  method.rs  response.rs  send.rs  uri.rs
