[package]
name = "tauri-app-ui"
version = "0.1.8"
edition = "2024"

[workspace]
members = [
    "hotkey",
    "hotkey-macros",
    "src-tauri",
]

[dependencies]
dioxus-logger = "0.7"
futures-util = "0.3.31"
js-sys = "0.3"
serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"

[dependencies.dioxus]
features = ["web"]
version = "0.7"

[dependencies.serde]
features = ["derive"]
version = "1"

[dependencies.tauri-sys]
branch = "v2"
features = [
    "core",
    "event",
]
git = "https://github.com/JonasKruckenberg/tauri-sys"

[dependencies.time]
features = [
    "formatting",
    "macros",
    "serde",
    "wasm-bindgen",
]
version = "0.3"

[patch.crates-io.tauri]
branch = "device-events"
git = "https://github.com/thlstsul/tauri"

[patch.crates-io.tauri-utils]
branch = "device-events"
git = "https://github.com/thlstsul/tauri"

[profile.android-dev]
inherits = "dev"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true

[profile.server-dev]
inherits = "dev"

[profile.wasm-dev]
inherits = "dev"
opt-level = 1
