[package]
name = "tauri-app-ui"
version = "0.3.0"
edition = "2024"

[workspace]
members = [
    "hotkey",
    "hotkey-macros",
    "src-tauri",
]

[dependencies]
dioxus-logger = "0.7"
encoding = "0.2.33"
futures-util = "0.3.31"
http = "1.4.0"
mime = "0.3.17"
serde_json = "1.0"

[dependencies.dioxus]
features = ["web"]
version = "0.7"

[dependencies.serde]
features = ["derive"]
version = "1"

[dependencies.tauri-sys]
branch = "v2"
features = [
    "core",
    "event",
]
git = "https://github.com/JonasKruckenberg/tauri-sys"

[dependencies.time]
features = [
    "formatting",
    "macros",
    "parsing",
    "serde",
    "wasm-bindgen",
]
version = "0.3"

[patch.crates-io.tauri]
branch = "device-events"
git = "https://github.com/thlstsul/tauri"

[patch.crates-io.tauri-utils]
branch = "device-events"
git = "https://github.com/thlstsul/tauri"

[patch.crates-io.wry]
branch = "ipc"
git = "https://github.com/thlstsul/wry"

[profile.android-dev]
inherits = "dev"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true

[profile.server-dev]
inherits = "dev"

[profile.wasm-dev]
inherits = "dev"
opt-level = 1
