[package]
name = "hotkey"
version = "0.2.2"
edition = "2024"

[dependencies]
error_set = "0.9.1"
inventory = "0.3.21"
keyboard-types = "0.8.3"
log = "0.4.29"
scc = "3.4.11"

[dependencies.hotkey-macros]
path = "../hotkey-macros"

[dependencies.tauri]
default-features = false
features = ["wry"]
version = "2.9.5"
