[package]
name = "white-hole"
version = "0.2.0"
authors = ["thlstsul"]
description = "Fxxk You Edge"
edition = "2024"

[build-dependencies.reqwest]
features = ["blocking"]
version = "0.13.1"

[build-dependencies.tauri-build]
features = []
version = "2.5.3"

[dependencies]
colored = "3.1.1"
delay_timer = "0.11.6"
error_set = "0.9"
get-data-url = "0.3"
log = "0.4.29"
percent-encoding = "2.3.2"
reqwest = "0.13.1"
scc = "3.4.11"
serde_json = "1"
tauri-plugin-deep-link = "2"
tauri-plugin-log = "2.8.0"
tauri-plugin-notification = "2.3.3"
url = "2.5.8"

[dependencies.cached]
features = ["async"]
version = "0.56.0"

[dependencies.fern]
features = ["colored"]
version = "0.7"

[dependencies.publicsuffix]
features = ["std"]
version = "2.3.0"

[dependencies.serde]
features = ["derive"]
version = "1"

[dependencies.sqlx]
features = [
    "runtime-tokio",
    "sqlite",
    "time",
]
version = "0.8.6"

[dependencies.tauri]
features = [
    "devtools",
    "tray-icon",
    "unstable",
]
version = "2.9.5"

[dependencies.time]
features = [
    "macros",
    "serde",
    "std",
]
version = "0.3.45"

[dependencies.tokio]
features = ["fs"]
version = "1"

[dependencies.uuid]
features = [
    "js",
    "serde",
    "v7",
]
version = "1"

[lib]
crate-type = [
    "cdylib",
    "rlib",
    "staticlib",
]
name = "white_hole_lib"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2.3"
tauri-plugin-updater = "2"
tauri-plugin-window-state = "2"
tauri-plugin-prevent-default = { version = "4", features = ["platform-windows"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies.hotkey]
path = "../hotkey"
